# Matrix-Calculator

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MatrixCalculator.desktop  README.md  io.github.MrMiYaGi68.MatrixCalculator.desktop  io.github.MrMiYaGi68.MatrixCalculator.json  io.github.MrMiYaGi68.MatrixCalculator.metainfo.xml  matrix_calculator-1.0.0-py3-none-any.whl  pyproject.toml
docs/screenshots/: README.md
